# spotify-project

./: MANIFEST.in  README.md  setup.cfg
tests/: test_example.py
