[metadata]
name = spotify_module
version = 1.0
author = Alonso and Matthijs :D
description = Template for python based microservices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bladieblah/spotify-project
project_urls =
    Bug Tracker = https://github.com/Bladieblah/spotify-project/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = spotify_module
python_requires = >=3.7
install_requires =
    numpy >=1.21.6
    joblib == 1.1.0
    scikit-learn >=1.0
    scipy >=1.7.2
    rapidfuzz ==1.8.2
    pybktree ==1.1
    natsort ==8.1.0